Implement blog page, add a few links

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -5,3 +5,8 @@ title: Ariel Costas
 outputs:
   home: ["HTML", "AMP"]
   posts: ["HTML", "RSS", "markdown"]
+
+markup:
+  goldmark:
+    renderer:
+      unsafe: true
