--- a/hugo.yaml
+++ b/hugo.yaml
@@ -2,6 +2,7 @@ baseURL: https://www.costas.dev/
 languageCode: es-ES
 defaultContentLanguage: es
 title: Ariel Costas
+disableHugoGeneratorInject: true
 
 markup:
   goldmark:
