--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.7.0",
-    "@astrojs/rss": "^4.0.6",
-    "@astrojs/sitemap": "^3.1.6",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/rss": "^4.0.8",
+    "@astrojs/sitemap": "^3.2.0",
     "@fontsource-variable/sen": "^5.0.5",
-    "astro": "^4.10.3",
-    "typescript": "^5.4.5"
+    "astro": "^4.16.1",
+    "braces": ">=3.0.3",
+    "typescript": "5.5.4"
   },
   "devDependencies": {
     "sass": "^1.76.0"
