--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/rss": "^4.0.8",
-    "@astrojs/sitemap": "^3.2.0",
-    "@fontsource-variable/sen": "^5.0.5",
-    "astro": "^4.16.1",
-    "braces": ">=3.0.3",
-    "typescript": "5.5.4"
+    "@astrojs/rss": "4.0.10",
+    "@astrojs/sitemap": "3.2.1",
+    "@fontsource-variable/sen": "5.1.0",
+    "astro": "^5.1.1",
+    "braces": "3.0.3",
+    "typescript": "5.7.2"
   },
   "devDependencies": {
     "sass": "^1.76.0"
