--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/rss": "4.0.10",
     "@astrojs/sitemap": "3.2.1",
     "@fontsource-variable/sen": "5.1.0",
+    "@fontsource/beiruti": "^5.1.1",
     "astro": "^5.1.1",
     "braces": "3.0.3",
     "typescript": "5.7.2"
