Fix SSH dir not existing

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -54,6 +54,7 @@ jobs:
           done
       - name: Add SSH Key
         run: |
+          mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan -H ${{ secrets.TARGET_HOST }} >> ~/.ssh/known_hosts
