--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build and Deploy Job
+    name: Build production artifact
     environment: Production
     steps:
       - uses: actions/checkout@v4
@@ -33,7 +33,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    name: Deploy to Production
+    name: Deploy to production server
     environment: Production
     steps:
       - name: Download Artifact
@@ -51,7 +51,7 @@ jobs:
         run: |
           until tailscale ping ${{ secrets.TARGET_HOST }}; do
             echo "Waiting for Tailscale to connect..."
-            sleep 5
+            sleep 2
           done
       - name: Add SSH Key
         run: |
