Refactor SCSS imports to use @use syntax, update portfolio entries, and add new projects

--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
     "build": "astro check && astro build",
-    "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "^4.2.0",
     "@astrojs/rss": "4.0.11",
     "@astrojs/sitemap": "3.2.1",
     "@fontsource-variable/sen": "5.2.5",
