--- a/package.json
+++ b/package.json
@@ -8,29 +8,24 @@
     "astro": "astro",
     "format": "prettier --write .",
     "format:dry": "prettier --check .",
-    "check": "astro check",
-    "prepare": "husky"
+    "check": "astro check"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^4.2.4",
-    "@astrojs/rss": "4.0.11",
-    "@astrojs/sitemap": "^3.3.0",
+    "@astrojs/mdx": "^4.3.0",
+    "@astrojs/rss": "4.0.12",
+    "@astrojs/sitemap": "^3.4.1",
     "@fontsource-variable/sen": "5.2.5",
     "@fontsource/beiruti": "^5.2.5",
     "@iconify-json/ph": "^1.2.2",
-    "astro": "^5.7.4",
+    "astro": "^5.8.2",
     "astro-icon": "^1.1.5",
-    "bootstrap": "^5.3.5",
-    "bootstrap-icons": "^1.11.3",
-    "braces": "3.0.3",
-    "husky": "^9.1.7",
     "rehype-external-links": "^3.0.0",
-    "typescript": "5.8.2"
+    "typescript": "5.8.3"
   },
   "devDependencies": {
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
-    "sass": "^1.86.3"
+    "sass": "^1.89.1"
   }
 }
