Refresh portfolio design and fonts

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@astrojs/mdx": "^4.3.0",
     "@astrojs/rss": "4.0.12",
     "@astrojs/sitemap": "^3.4.1",
+    "@fontsource-variable/mulish": "^5.2.5",
+    "@fontsource-variable/onest": "^5.2.9",
     "@fontsource-variable/sen": "5.2.5",
     "@fontsource/beiruti": "^5.2.5",
-    "@iconify-json/ph": "^1.2.2",
+    "@iconify-json/tabler": "^1.2.19",
     "astro": "^5.8.2",
     "astro-icon": "^1.1.5",
     "rehype-external-links": "^3.0.0",
