--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fontsource/beiruti": "^5.2.5",
     "@iconify-json/tabler": "^1.2.19",
     "astro": "^5.13.2",
+    "astro-compressor": "^1.1.2",
     "astro-icon": "^1.1.5",
     "rehype-external-links": "^3.0.0",
     "typescript": "5.8.3"
