--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "@astrojs/mdx": "^4.3.0",
     "@astrojs/rss": "4.0.12",
     "@astrojs/sitemap": "^3.4.1",
-    "@fontsource-variable/mulish": "^5.2.5",
     "@fontsource-variable/onest": "^5.2.9",
-    "@fontsource-variable/sen": "5.2.5",
-    "@fontsource/beiruti": "^5.2.5",
+    "@fontsource-variable/roboto": "^5.2.6",
+    "@fontsource-variable/roboto-mono": "^5.2.6",
     "@iconify-json/tabler": "^1.2.19",
     "astro": "^5.13.2",
     "astro-compressor": "^1.1.2",
@@ -30,5 +29,8 @@
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "sass": "^1.89.1"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "*"
   }
 }
