Make workflow faster [no ci]

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -61,4 +61,4 @@ jobs:
           ssh-keyscan -H ${{ secrets.TARGET_HOST }} >> ~/.ssh/known_hosts
       - name: Deploy
         run: |
-          scp -r dist/* ${{ secrets.TARGET_USER }}@${{ secrets.TARGET_HOST }}:${{ secrets.TARGET_PATH }}/
+          rsync -avz dist/ ${{ secrets.TARGET_USER }}@${{ secrets.TARGET_HOST }}:${{ secrets.TARGET_PATH }}/
